# ripari

./: .cursorrules  .gitignore  Cargo.toml  MARKETING.md  README.md  TODO.md  justfile  knope.toml  package.json  pnpm-lock.yaml  simora.json  taplo.toml
.cargo/: config.toml
.github/workflows/: release_cli.yml
crates/ripari_cli/: Cargo.toml
crates/ripari_cli/src/: console.rs  diagnostics.rs  lib.rs  workspace.rs
crates/ripari_cli/src/commands/: format.rs  lint.rs  mod.rs  simora_command.rs
crates/simora_configuration/: Cargo.toml  temp_config.json
crates/simora_configuration/src/: global_config.rs  lib.rs  rules.rs  types.rs
crates/simora_formatter/: Cargo.toml
crates/simora_formatter/src/: debug.rs  lib.rs
crates/simora_glob/: Cargo.toml  README.md
crates/simora_glob/src/: lib.rs
crates/simora_prompt/: Cargo.toml
crates/simora_prompt/src/: console.rs  diagnostics.rs  globby.rs  lib.rs  main.rs  workspace.rs
crates/simora_prompt/src/commands/: format.rs  lint.rs  mod.rs
docs/: 2025-01-06-ai-coding-assistants-lessons copy.md  2025-01-06-ai-coding-assistants-lessons.md  BAD_input.md  BAD_input_test.md  cli_usage.md  globby.md
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
