[workspace]
# Use the newer version of the cargo resolver
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members  = [
    "crates/simora_prompt",
    "crates/simora_formatter",
    "crates/simora_configuration",
    "crates/simora_glob"
]
resolver = "2"

[workspace.dependencies]
# Crates needed in the workspace
anyhow             = "1.0.95"
bpaf               = { version = "0.9.15", features = ["derive"] }
countme            = "3.0.1"
crossbeam          = "0.8.4"
dashmap            = "6.1.0"
enumflags2         = "0.7.10"
getrandom          = "0.2.15"
globset            = "0.4.15"
ignore             = "0.4.23"
indexmap           = { version = "2.7.0", features = ["serde"] }
insta              = "1.42.0"
natord             = "1.0.9"
oxc_resolver       = "3.0.3"
proc-macro2        = "1.0.86"
quickcheck         = "1.0.3"
quickcheck_macros  = "1.0.0"
quote              = "1.0.38"
rayon              = "1.10.0"
regex              = "1.11.1"
rustc-hash         = "2.1.0"
schemars           = { version = "0.8.21", features = ["indexmap2", "smallvec"] }
serde              = { version = "1.0.217", features = ["derive"] }
serde_ini          = "0.2.0"
serde_json         = "1.0.134"
similar            = "2.6.0"
slotmap            = "1.0.7"
smallvec           = { version = "1.13.2", features = ["union", "const_new", "serde"] }
syn                = "1.0.109"
termcolor          = "1.4.1"
tokio              = "1.42.0"
tracing            = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.19"
unicode-bom        = "2.0.3"
unicode-width      = "0.1.12"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code                              = "warn"
trivial_numeric_casts                  = "warn"
unused_import_braces                   = "warn"
unused_lifetimes                       = "warn"
unused_macro_rules                     = "warn"


[workspace.lints.clippy]
allow_attributes        = "deny"
cargo_common_metadata   = "allow"
empty_docs              = "allow" # there are some false positives inside biome_wasm
multiple_crate_versions = "allow"

# pedantic
assigning_clones             = "warn"
checked_conversions          = "warn"
cloned_instead_of_copied     = "warn"
copy_iterator                = "warn"
dbg_macro                    = "warn"
doc_link_with_quotes         = "warn"
empty_enum                   = "warn"
expl_impl_clone_on_copy      = "warn"
explicit_into_iter_loop      = "warn"
filter_map_next              = "warn"
flat_map_option              = "warn"
fn_params_excessive_bools    = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone               = "warn"
implicit_hasher              = "warn"
index_refutable_slice        = "warn"
inefficient_to_string        = "warn"
invalid_upcast_comparisons   = "warn"
iter_filter_is_ok            = "warn"
iter_not_returning_iterator  = "warn"
large_stack_arrays           = "warn"
large_types_passed_by_value  = "warn"
macro_use_imports            = "warn"
manual_is_variant_and        = "warn"
manual_ok_or                 = "warn"
manual_string_new            = "warn"
map_flatten                  = "warn"
map_unwrap_or                = "warn"
mismatching_type_param_order = "warn"
mut_mut                      = "warn"
naive_bytecount              = "warn"
needless_bitwise_bool        = "warn"
needless_continue            = "warn"
needless_for_each            = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned         = "warn"
ref_binding_to_reference     = "warn"
ref_option_ref               = "warn"
single_char_pattern          = "warn"
stable_sort_primitive        = "warn"
str_split_at_newline         = "warn"
unnecessary_box_returns      = "warn"
unnecessary_join             = "warn"
unnested_or_patterns         = "warn"
unreadable_literal           = "warn"
verbose_bit_mask             = "warn"
zero_sized_map_values        = "warn"

# restriction
cfg_not_test                      = "warn"
empty_drop                        = "warn"
empty_enum_variants_with_brackets = "warn"
float_cmp_const                   = "warn"
get_unwrap                        = "warn"
infinite_loop                     = "warn"
lossy_float_literal               = "warn"
rc_buffer                         = "warn"
rc_mutex                          = "warn"
rest_pat_in_fully_bound_structs   = "warn"
string_lit_chars_any              = "warn"
verbose_file_reads                = "warn"
# https://github.com/rustwasm/wasm-bindgen/issues/3944
#mem_forget                      = "warn"

[workspace.package]
authors    = ["Simora Developers and Contributors"]
categories = ["development-tools", "web-programming"]
edition    = "2021"
homepage   = "https://pashley.org/"
keywords   = ["parser", "linter", "formatter"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/simora/simora-prompt-cli"
