[package]
edition = "2021"
name    = "simora_prompt"
version = "0.1.0"

[dependencies]
regex                = "1"
serde_json           = "1.0"
simora_configuration = { path = "../simora_configuration" }
simora_formatter     = { path = "../simora_formatter" }
simora_glob          = { path = "../simora_glob" }
walkdir              = "2"

[[bin]]
name = "ripari"
path = "src/main.rs"
