[package]
authors.workspace    = true
categories.workspace = true
description          = "Ripari's command line interface"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "ripari_cli"
publish              = false
repository.workspace = true
version              = "0.1.0"


[dependencies]
regex                = "1"
serde_json           = "1.0"
simora_configuration = { path = "../simora_configuration" }
simora_formatter     = { path = "../simora_formatter" }
simora_glob          = { path = "../simora_glob" }
walkdir              = "2"

[[bin]]
name = "ripari"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc  = "0.2.169"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = "0.6.0"

[lints]
workspace = true
