[package]
name                 = "simora_prompt"
version              = "0.0.0"
edition.workspace    = true
authors.workspace    = true
description          = "Simora Prompt's command line interface"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish             = false

[[bin]]
name = "simora-prompt"
path = "src/main.rs"

[dependencies]
anyhow                   = { workspace = true }
bpaf                     = { workspace = true, features = ["bright-color"] }
crossbeam                = { workspace = true }
dashmap                  = { workspace = true }
hdrhistogram             = { version = "7.5.4", default-features = false }
indexmap                 = { workspace = true }
path-absolutize          = { version = "3.1.1", optional = false, features = ["use_unix_paths_on_wasm"] }
quick-junit              = "0.5.1"
rayon                    = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
smallvec                 = { workspace = true }
tokio                    = { workspace = true, features = ["io-std", "io-util", "net", "time", "rt", "sync", "rt-multi-thread", "macros"] }
tracing                  = { workspace = true }
tracing-appender         = "0.2.3"
tracing-subscriber       = { workspace = true, features = ["env-filter", "json"] }
tracing-tree             = "0.4.0"
walkdir                  = "2.4.0"

[target.'cfg(unix)'.dependencies]
libc  = "0.2.169"
tokio = { workspace = true, features = ["process"] }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.43"

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
insta                = { workspace = true }
regex                = { workspace = true }
tokio                = { workspace = true, features = ["io-util"] }
tempfile             = "3.8.1"

[features]
docgen            = ["bpaf/docgen"]

[lints]
workspace = true
