[package]
name = "simora-prompt"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for managing and formatting Markdown files"
license = "MIT"

[dependencies]
simora_glob = { path = "../simora_glob" }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
walkdir = "2.4.0"
regex = "1.10.2"
globset = "0.4.13"
anyhow = "1.0.75"
thiserror = "1.0.50"
miette = { version = "5.10.0", features = ["fancy"] }
console = "0.15.7"
similar = "2.3.0"
termcolor = "1.4.0"
unicode-width = "0.1.11"
rayon = "1.8.0"
ignore = "0.4.21"
log = "0.4.20"
env_logger = "0.10.1"

[dev-dependencies]
tempfile = "3.8.1"
